manifests/wireguard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: wireguard
  labels:
    app: wireguard
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "worker"
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy:14
          ports:
            - name: wireguard
              containerPort: 51820
              protocol: UDP
            - name: ui
              containerPort: 51821
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          volumeMounts:
            - name: config
              mountPath: /etc/wireguard
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wireguard-config
