manifests/wireguard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wireguard
  namespace: wireguard
  annotations:
    homelab.io/expose: "internal"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "WireGuard"
    gethomepage.dev/description: "VPN Gateway"
    gethomepage.dev/group: "Management"
    gethomepage.dev/icon: "wireguard.png"
spec:
  ingressClassName: traefik
  rules:
    - host: wireguard.elmstreet79.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wireguard-ui
                port:
                  number: 51821
